# axum-restful

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  clippy.toml
examples/demo/: .env  Cargo.toml  Makefile  README.md  compose.yaml
examples/demo/migration/: Cargo.toml
examples/demo/migration/src/: m20220101_000001_create_table.rs  main.rs
examples/demo/src/: check.rs  lib.rs  main.rs
examples/demo/src/entities/: mod.rs  prelude.rs  student.rs
examples/full/: Cargo.toml
examples/full/src/: main.rs
src/: db.rs  error.rs  lib.rs  test_helpers.rs  views.rs
src/auth/: mod.rs
src/swagger/: asset.rs  generator.rs  mod.rs
src/utils/: mod.rs  prometheus_metrics.rs  router.rs  server.rs  tls.rs
src/views/: macros.rs  mod.rs  operates.rs  page.rs
statics/swagger/: swagger-initializer.js
