[package]
name = "axum-restful"
version = "0.2.0"
edition = "2021"
categories = ["web-programming::http-server", "asynchronous"]
description = "A restful framework based on axum and sea-orm."
keywords = ["axum", "sea-orm", "restful"]
authors = ["Gongzhengyang <gongzhengyangfindyourdream@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/gongzhengyang/axum-restful"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6"
axum-core = "0.3.3"
async-trait = "0.1.64"
sea-orm = { version = "0.11", features = ["macros", "sqlx-postgres", "runtime-tokio-rustls", "tests-cfg", "mock"] }
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "= 1.0.65"
tokio-rustls = "0.23"
axum-server = { version = "0.4", features = ["tls-rustls"] }
bytes = "1.4"
http = "0.2.9"
hyper = "0.14.25"
tower = "0.4.13"
tower-service = "0.3.2"
reqwest = { version = "0.11.14", default-features = false, features = ["json", "stream", "multipart"] }
metrics-exporter-prometheus = "0.11"
metrics = "0.20"
rcgen = "0.10.0"
pem = "1.0"
