[package]
name = "axum-restful"
version = "0.3.2"
edition = "2021"
categories = ["web-programming::http-server", "asynchronous"]
description = "A restful framework based on axum and sea-orm."
keywords = ["axum", "sea-orm", "restful"]
authors = ["Gongzhengyang <gongzhengyangfindyourdream@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/gongzhengyang/axum-restful"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aide = { version = "0.12", features = ["redoc", "macros", "axum-extra-query", "axum"] }
anyhow = "1.0"
async-trait = "0.1"
axum = "0.6"
axum-core = "0.3.3"
axum-server = { version = "0.5", features = ["tls-rustls"] }
bytes = "1"
http = "0.2.9"
hyper = "0.14"
log = "0.4"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
mime_guess = "2"
paste = "1"
rcgen = "0.11"
reqwest = { version = "0.11.14", default-features = false, features = ["json", "stream", "multipart"] }
rust-embed = { version = "8", features = ["compression", "debug-embed"] }
schemars = "0.8"
sea-orm = { version = "0.12", features = ["macros", "sqlx-postgres", "runtime-tokio-rustls", "tests-cfg", "mock"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = { version = "0.7", features = ["backtraces"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.24"
tower = "0.4"
tower-service = "0.3.2"
tracing = "0.1"
