[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "migration"]

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
axum-restful = { path = "../../" }
axum = "0.6"
migration = { path = "./migration"}
sea-orm-migration = {version = "0.11.1", features = ["sqlx-postgres", "runtime-tokio-rustls",]}
sea-orm = { version = "0.11", features = ["macros", "sqlx-postgres", "runtime-tokio-rustls"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"]}
schemars = "0.8.12"
aide = "0.10.0"
